# doctour

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md  safety_blocklist.json
data/corpus/: CONFESSIO AMANTIS- GOWER'S CONFESSION OF A LOVER.txt  Dioscorides_De_Materia_Medica_2000_English.txt  Extrasensory_Perception_Research_Finding.txt  Galen-On-Natural-Faculties(alternate-version 2).txt  Galen-On-Natural-Faculties- The-Loeb-Classical-Library.txt  Galen-OnNatural-Faculties(alternate-version 3).txt  Genuine-Works-of-Hippocrates-Francis Adams LL.D.txt  John of Arderne Fistula.txt  Olsen-Cleanness-Diplomatic-Edition-Text.txt  Ornatis Vir - Latin.txt  README.md  RERUM BRITANNICARUM MEDII jEVI.txt  Revelations-of-Divine-Love - Juliana.txt  The Canon of Medicine, Volume 1.txt  The Canon of Medicine, Volume 2.txt  The Canon of Medicine, Volume 3.txt  The Canon of Medicine, Volume 4.txt  canterbury-taleso-chaucer.txt  language_analysis.txt
data/herbs/: herbs.csv
docs/design/: system_architecture.md
scripts/: convert_pdfs.py  index_corpus.py  run_doctour.py  translate_texts.py
src/doctour/: __init__.py  config.py  conversation.py  data_loader.py  main.py  model.py  rag.py  safety.py
tests/: __init__.py  conftest.py  test_data_integrity.py  test_safety.py
