[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctour"
version = "0.1.0"
description = "A medieval medical AI trained on pre-1410 historical texts, providing evidence-based herbal remedies through authentic Middle English."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Git-Lister", email = "your-email@example.com"},
]
keywords = [
    "medieval-medicine",
    "nlp",
    "medical-ai",
    "herbal-remedies",
    "middle-english",
    "lora-finetuning",
    "safety-ai",
    "historical-nlp",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core ML/LLM
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    
    # RAG & Embeddings
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.0",
    # Alternative: "faiss-cpu>=1.7.4",
    
    # NLP Utilities
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    
    # API & Web
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "pydantic>=2.5.0",
    "gradio>=4.0.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

llama = [
    # For GGUF model support
    "llama-cpp-python>=0.2.0",
]

postgres = [
    # For production database
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/Git-Lister/doctour"
Repository = "https://github.com/Git-Lister/doctour"
Issues = "https://github.com/Git-Lister/doctour/issues"
Documentation = "https://github.com/Git-Lister/doctour#readme"

[project.scripts]
doctour = "doctour.cli:main"
doctour-train = "doctour.training:train_model"
doctour-server = "doctour.api:run_server"

[tool.setuptools.packages.find]
where = ["src"]
include = ["doctour*"]

[tool.setuptools.package-data]
doctour = ["py.typed"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | models
  | data
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "models",
    "data",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/doctour",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "safety: Safety-critical tests (toxic substances, emergency detection)",
    "slow: Tests that take a long time to run",
    "integration: Integration tests requiring external services",
    "model: Tests requiring trained models",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
